--- a/9.0.0/build.gradle
+++ b/9.0.0/build.gradle
@@ -151,4 +151,8 @@ task sourcesJar(type: Jar) {
     from sourceSets.main.allJava
 }
 
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
+}
+
 tasks.build.dependsOn deobfJar, sourcesJar
